Fixes for alignment issues on the settings screen introduced by WP 5.3

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -579,6 +579,7 @@
 }
 
 #variable_product_options {
+
 	.form-row select {
 		max-width: 100%;
 	}
@@ -621,13 +622,14 @@ mark.amount {
 .woocommerce-help-tip {
 	color: #666;
 	display: inline-block;
-	font-size: 1.1em;
+	font-size: 1.2em;
 	font-style: normal;
 	height: 16px;
 	line-height: 16px;
 	position: relative;
 	vertical-align: middle;
 	width: 16px;
+	cursor: help;
 
 	&::after {
 
@@ -3863,6 +3865,14 @@ img.help_tip {
 		margin: -8px 0 0;
 	}
 
+	h2.wc-table-list-header {
+		margin: 1em 0 0.35em 0;
+	}
+
+	input + .subsubsub {
+		margin: 8px 0 0;
+	}
+
 	.wc-admin-breadcrumb {
 		margin-left: 0.5em;
 
@@ -3930,7 +3940,6 @@ img.help_tip {
 		input.regular-input {
 			width: 400px;
 			margin: 0;
-			padding: 6px;
 			box-sizing: border-box;
 			vertical-align: top;
 		}
@@ -3997,7 +4006,7 @@ img.help_tip {
 
 			img.help_tip,
 			.woocommerce-help-tip {
-				margin: -8px -24px 0 0;
+				margin: -7px -24px 0 0;
 				position: absolute;
 				right: 0;
 				top: 50%;
@@ -4071,13 +4080,19 @@ img.help_tip {
 			background-color: #ffafaf;
 		}
 
+		.forminp-color {
+			font-size: 0;
+		}
+
 		.colorpickpreview {
 			padding: 7px 0;
 			line-height: 1em;
 			display: inline-block;
-			width: 26px;
-			border: 1px solid #ddd;
-			font-size: 14px;
+			width: 30px;
+			box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
+			font-size: 16px;
+			border-radius: 4px;
+			margin-right: 3px;
 		}
 
 		.image_width_settings {
@@ -6525,6 +6540,10 @@ table.bar_chart {
 	.select2-results__group {
 		margin: 0;
 		padding: 8px;
+
+		&:focus {
+			outline: none;
+		}
 	}
 
 	.description {
@@ -6535,18 +6554,39 @@ table.bar_chart {
 }
 
 .select2-dropdown {
-	border-color: #ddd;
+	border-color: #007cba;
+
+	&::after {
+		position: absolute;
+		left: 0;
+		right: 0;
+		height: 1px;
+		background: #fff;
+		content: "";
+	}
 }
 
 .select2-dropdown--below {
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 0 1px #007cba, 0 2px 1px rgba(0, 0, 0, 0.1);
+
+	&::after {
+		top: -1px;
+	}
 }
 
 .select2-dropdown--above {
-	box-shadow: 0 -1px 1px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 0 1px #007cba, 0 -2px 1px rgba(0, 0, 0, 0.1);
+
+	&::after {
+		bottom: -1px;
+	}
 }
 
 .select2-container {
+
+	&:focus {
+		outline: none;
+	}
 
 	.select2-selection__rendered.ui-sortable li {
 		cursor: move;
@@ -6561,23 +6601,48 @@ table.bar_chart {
 	}
 
 	.select2-selection--single {
-		height: 40px;
+		height: 30px;
+		border-color: #7e8993;
+
+		&:focus {
+			outline: none;
+		}
 
 		.select2-selection__rendered {
-			line-height: 40px;
+			line-height: 28px;
 			padding-right: 24px;
+
+			&:hover {
+				color: #007cba;
+			}
 		}
 
 		.select2-selection__arrow {
-			right: 3px;
-			height: 36px;
+			right: 1px;
+			height: 28px;
+			width: 28px;
+			background: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M5%206l5%205%205-5%202%201-7%207-7-7%202-1z%22%20fill%3D%22%23555%22%2F%3E%3C%2Fsvg%3E") no-repeat right 5px top 55%;
+			background-size: 16px 16px;
+
+			b {
+				display: none;
+			}
 		}
 	}
 
+	&.select2-container--focus .select2-selection--single,
+	&.select2-container--open .select2-selection--single,
+	&.select2-container--open .select2-selection--multiple {
+		border-color: #007cba;
+		box-shadow: 0 0 0 1px #007cba;
+	}
+
 	.select2-selection--multiple {
-		min-height: 28px;
+		min-height: 30px;
 		border-radius: 0;
 		line-height: 1.5;
+		border-color: #7e8993;
+		border-radius: 4px;
 
 		li {
 			margin: 0;
@@ -6601,7 +6666,8 @@ table.bar_chart {
 		font-family: inherit;
 		font-size: inherit;
 		font-weight: inherit;
-		padding: 3px 0;
+		padding: 0 0 0 3px;
+		min-height: 28px;
 	}
 }
 
